Completed Cars fixed horizontal scroll bar modified footer's last line

--- a/css/index.css
+++ b/css/index.css
@@ -36,6 +36,10 @@ nav ul li a {
     /* Safari */
     transform: skewX(-15deg);
     /* Standard syntax */
+    margin:auto 11px;
+}
+nav ul li a:hover{
+    background-color: transparent;
 }
 nav ul li:hover {
     background-color: rgba(98, 98, 98, .25)!important;
